--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # database configurations
-spring.datasource.url= jdbc:mysql://localhost:3306/cms?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:8806/cmss?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.generate-ddl=true
