--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.jpa.properties.hibernate.dialet= org.hibernate.dialect.MySQL5Dialect
 # App Properties
 app.jwtSecret=jwtGrokonezSecretKey
 app.jwtExpiration=86400
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
