--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
+#
+pathupload =/home/dinh/Desktop/TDDH/ddddddddddddddddd/TDDH-AIRBNB-BACKEND/src/main/resources/
